# RiftResearch

./: PatchCreator.cpp  PatchCreator.cpp~  Rift  Socket.cpp  UDP.cpp  UDP.cpp~  UDPGazer.c  UDPGazer.c~  a.out  backup_rift.cpp  backup_rift2.cpp  beep.cpp  load_in_rift.m  mydata.txt~  old_rift.cpp  patch  rift  rift.cpp  rift.cpp~  riftBackup  riftLimb  riftLimbTrack.cpp  riftLimbTrack.cpp~  riftRec  riftRecovered.cpp  riftTest  riftTest2  riftTest3  riftTest5  riftTester.cpp~  riftTester2.cpp  riftTester2.cpp~  riftTester3.cpp~  riftTester4.cpp~  riftTester5.cpp~  sand  sand_treadmill.cpp  sand_treadmill.cpp~  sand_treadmill2.cpp  sand_treadmill_test.cpp~  (+16 more)
Object Oriented/Rift Side/: UDPComm.cs
Object Oriented/Treadmill Side/: UDPSender.cpp  UDPSender.cpp~  dataGenerator.cpp  dataGeneratorLinux.cpp  dataGeneratorLinux.h  makefile  riftPerturbationHandler.h  sharedMemObject.cpp  sharedMemObject.h  socketManagerLinux.cpp  socketManagerLinux.h  udpSender
ObjectOriented/RiftSide/: patch.cs
ObjectOriented/TreadmillSide/: UDPSender.cpp  UDPSenderTester.cpp  dataGenerator.cpp  dataGeneratorWindows.cpp  lookup_table.h  riftDataAnalysis  sharedMemJeff.h  sharedMemObject.cpp  socketManager.h  socketManagerWindows.cpp  threadTester  treadmillController.cpp  treadmillController.h
ObjectOriented/TreadmillSide/EMG/: CMakeLists.txt  emg.cpp~
ObjectOriented/TreadmillSide/EMG/emgErin/: EMGClient
ObjectOriented/TreadmillSide/EMG/emgIvan/: CMakeCache.txt  Makefile  MonitorConfig.h
ObjectOriented/TreadmillSide/EMG/emgJohn/: CMakeCache.txt  Makefile  cmake_install.cmake
Papers/RiftPaper/: main.bbl  main.blg  main.tex  results.tex
Results/Data/: andrewData_8-21-14.mat  erinKinematics_8-03-14_2.mat  ivan1.txt  jeremy_july14.txt
Results/MatlabAnalysis/: CycleAnalyzer.m  CycleCollection.m  GaitCycle.m  error_ellipse.m  hip3.fig  hipPhase1.fig  (+10 more)
Rift Git/: Chase_kin_HS_start.m  JustinKinFigs.fig  perturb.mat  rift.cpp  riftHeader.h  rift_HS_start.asv  rift_HS_start.m  sand_treadmill.cpp
RiftGit/: load_in_rift2.m  rift.cpp~
Test Codes/: iHS  isHeelStrike.cpp  isHeelStrike.cpp~  listTest  listTest.cpp  newS2F  newSave2File.cpp~  posData.cpp  posData.cpp~  posData.h  posData.h~  riftTester2.cpp  riftTester4.cpp  sand_treadmill_test.cpp~  sand_treadmill_test2.cpp  time  timeTest  timeTest.cpp  timeTest.cpp~
(+152 files in other folders)
